# tinycthread

./: .gitignore  CMakeLists.txt
include/: tinycthread.h
src/: tinycthread.c
test/: Makefile
